# attack_path_web

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: analyze.py  annotations.py  exports.py  pipeline.py  settings.py  targets.py
backend/app/services/: exports.py  mermaid.py  pipeline.py  rowcolor.py
deploy/: nginx.conf
deploy/systemd/: attack-path.service
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AnnotationModal.tsx  BuildView.tsx  MermaidPreview.tsx  SettingsView.tsx  ViewerView.tsx
infra/: cloudformation.yaml
